# texture-tool

./: .gitmodules  CMakeLists.txt  build_many_linux.sh  docker.sh  load_hdr.py  postfix.sh  postfix_wheel.py  setup.py  test.py
3dparty/PVRTexTool/: License.txt
3dparty/PVRTexTool/Include/: PVRTArray.h  PVRTError.h  PVRTMap.h  PVRTTexture.h  PVRTexture.h  PVRTextureFormat.h  PVRTextureHeader.h
pypvrtex/: __init__.py  cubemap_from_equirectangular.py  describe.py  downsample2x.py  generate_mipmaps.py  imread.py  transcode.py  utils.py
sources/: common.h  coordinate_transform.h  env_map_math.h  main.cpp
